--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -27,13 +27,15 @@ body {
     padding:0;
     width:100vw;
     height:100%;
+    border-radius: 24px;
     background-color:rgba(0,0,0,.45);
 }
 #topCard {
     padding:0;
     box-shadow: none;
     width:100vw;
-    border-radius: 0;
+    height:30vw;
+    // border-radius: 0;
     background-image: url(../Assets/Images/hero1.jpg);
     background-size:100%;;
     background-color:black;
